SV 24/11/2005
- Changed GraphStats to stop calculating average path length, once it is known
  to be infinite (one node is unreachable).
- Fixed BallExpansion. Previously, in case of unreachable nodes, although the
  average path length was (correctly) set to Infinity, the getMaxCount()
  property returned inconsistent data. Now it returns the number of nodes at
  maximum distance (Infinity), that is, the number of unreachable nodes.
- Now GraphAlgorithms.bfs() sets the (trivial) distance to node "from" to 0.
- Cleaned up code duplication in GraphAlgorithms.flooding(). It now makes use
  of GraphAlgorithms.dist().
- Also fixed comments in GraphAlgorithms.

MJ 23/11/2005
- Fixed a bug in GraphStats found by Spyros: it now handles partitioned
  graphs correctly
- Fixed the same bug in BallExpansion as well
- Changed the classdocs of GraphStats that incorrectly stated that
  it prints IncrementalStats.toString instead of just the average

AM 22/11/2005
- Corrected a bug in RangeSimulator, pointed out by Spyros
  (problems with jvm.options parameter)

AM 11/11/2005
VERSION 1.0 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

AM 11/11/2005
- Fixed a bug identified by Gian Paolo, using his suggestion; 
  the unqualified classname search in jar files was not working 
  under Windows, because files in Jar files are '/'-separated, 
  independently from the platform.

GJ 10/11/05
- Fixed a bug in BasicBalance: did not work it quota != 0
- Refreshed LBObsever.

GJ 9/11/05
- Refactored hot example package. Many features (e.g.,in-degree) are now 
  obtained using standard peersim components. See the config-file.
- Any Linkable protocol can be initialized by the HOT topology.
- RobustenessEvaluator removed, use RandRemoval instead.
- InetNodeProtocol renamed to: InetCoordinates.

AM 08/11/05
- Fixed a bug in ClassFinder (a problem with file separator in 
  Windows). 

MJ 07/11/05